<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView_profile_picture"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/sapilogo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/insert_picture"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@+id/linear_layout_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/cardView_profile_picture"
        app:layout_constraintBottom_toTopOf="@+id/scrollview_id">

        <Button
            android:id="@+id/sign_out"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:textSize="15sp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:fontFamily="sans-serif-thin"
            android:text="@string/sign_out"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <!--android:layout_marginEnd="30dp"-->
        <!--app:layout_constraintRight_toRightOf="@id/ads_button" -->

        <!--<Button-->
        <!--android:id="@+id/ads_button"-->
        <!--android:layout_width="100dp"-->
        <!--android:layout_height="50dp"-->
        <!--android:textSize="15sp"-->
        <!--android:layout_marginStart="30dp"-->
        <!--android:backgroundTint="@color/colorButton"-->
        <!--android:fontFamily="sans-serif-thin"-->
        <!--android:text="@string/ads"-->
        <!--android:textColor="@color/colorPrimary"-->
        <!--android:textStyle="bold"-->

        <!--app:layout_constraintLeft_toLeftOf="@id/sign_out"-->
        <!--app:layout_constraintRight_toRightOf="parent"/>-->

    </LinearLayout>


    <ScrollView
        android:id="@+id/scrollview_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="350dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <EditText
                android:id="@+id/change_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorLoginRegisterText"
                android:inputType="textPersonName"
                android:fontFamily="sans-serif-light"
                android:hint="@string/first_name"
                android:textColor="@color/colorLoginRegisterText"
                android:textColorHint="@color/colorLoginRegisterText"
                android:textColorLink="@color/colorLoginRegisterText"
                android:textCursorDrawable="@null"
                android:textSize="21sp"
                app:layout_constraintHorizontal_bias="0.511"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />
            <!--android:singleLine="true"-->

            <EditText
                android:id="@+id/change_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorLoginRegisterText"
                android:inputType="textPersonName"
                android:fontFamily="sans-serif-light"
                android:hint="@string/last_name"
                android:textColor="@color/colorLoginRegisterText"
                android:textColorHint="@color/colorLoginRegisterText"
                android:textColorLink="@color/colorLoginRegisterText"
                android:textCursorDrawable="@null"
                android:textSize="21sp"
                app:layout_constraintHorizontal_bias="0.511"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/change_first_name" />

            <EditText
                android:id="@+id/change_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorLoginRegisterText"
                android:inputType="textEmailAddress"
                android:fontFamily="sans-serif-light"
                android:hint="@string/email"
                android:textColor="@color/colorLoginRegisterText"
                android:textColorHint="@color/colorLoginRegisterText"
                android:textColorLink="@color/colorLoginRegisterText"
                android:textCursorDrawable="@null"
                android:textSize="21sp"
                app:layout_constraintHorizontal_bias="0.511"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/change_last_name"/>

            <EditText
                android:id="@+id/change_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorLoginRegisterText"
                android:inputType="text"
                android:fontFamily="sans-serif-light"
                android:hint="@string/address"
                android:textColor="@color/colorLoginRegisterText"
                android:textColorHint="@color/colorLoginRegisterText"
                android:textColorLink="@color/colorLoginRegisterText"
                android:textCursorDrawable="@null"
                android:textSize="21sp"
                app:layout_constraintHorizontal_bias="0.511"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/change_email" />

            <Button
                android:id="@+id/save_button"
                android:layout_width="100dp"
                android:layout_height="50dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/change_address"
                android:textStyle="bold"
                android:textSize="15sp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:fontFamily="sans-serif-thin"
                android:text="@string/save"
                android:textColor="@color/colorPrimary" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>